--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AOT Asset Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -27,11 +27,12 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8;
       }
-      /* Leaflet container fix */
-      .leaflet-container {
-        width: 100%;
-        height: 100%;
-        z-index: 0;
+      /* Leaflet z-index fix for modals */
+      .leaflet-pane {
+        z-index: 10;
+      }
+      .leaflet-top, .leaflet-bottom {
+        z-index: 20;
       }
     </style>
   <script type="importmap">
@@ -48,7 +49,7 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0?external=react,react-dom",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3?external=react,react-dom",
-    "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
+    "leaflet": "https://aistudiocdn.com/leaflet@1.9.4",
     "react-leaflet": "https://aistudiocdn.com/react-leaflet@^4.2.1?external=react,react-dom,leaflet"
   }
 }
