--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AOT Asset Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -27,12 +27,15 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8;
       }
-      /* Leaflet z-index fix for modals */
-      .leaflet-pane {
-        z-index: 10;
+      
+      /* Mapbox popup customization */
+      .mapboxgl-popup-content {
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
       }
-      .leaflet-top, .leaflet-bottom {
-        z-index: 20;
+      .mapboxgl-popup-close-button {
+        color: #64748b;
       }
     </style>
   <script type="importmap">
@@ -49,8 +52,7 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0?external=react,react-dom",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3?external=react,react-dom",
-    "leaflet": "https://aistudiocdn.com/leaflet@1.9.4",
-    "react-leaflet": "https://aistudiocdn.com/react-leaflet@^4.2.1?external=react,react-dom,leaflet"
+    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0"
   }
 }
 </script>
