--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1?external=react,react-dom",
     "echarts": "https://aistudiocdn.com/echarts@^5.6.0",
     "echarts-for-react": "https://aistudiocdn.com/echarts-for-react@^3.0.2?external=react,react-dom",
@@ -52,7 +51,8 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0?external=react,react-dom",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3?external=react,react-dom",
-    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0"
+    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0",
+    "livekit-client": "https://esm.sh/livekit-client@2.0.4"
   }
 }
 </script>
