feat: Update dependencies and remove unused Gemini config
Refactors imports and dependencies, removing specific Gemini API configuration from vite.config.ts and updating packages.json with the latest stable versions. Removes the unused `@google/genai` import from index.html and cleans up the .gitignore file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏢</text></svg>">
     <title>AOT Asset Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -52,7 +51,8 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0?external=react,react-dom",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3?external=react,react-dom",
-    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0"
+    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0",
+    "livekit-client": "https://esm.sh/livekit-client@2.0.4"
   }
 }
 </script>
