--- a/index.html
+++ b/index.html
@@ -3,41 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏢</text></svg>">
     <title>AOT Asset Management</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #f8f9fc;
-      }
-      /* Custom scrollbar for cleaner look */
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #cbd5e1;
-        border-radius: 3px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #94a3b8;
-      }
-      
-      /* Mapbox popup customization */
-      .mapboxgl-popup-content {
-        padding: 10px;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-      }
-      .mapboxgl-popup-close-button {
-        color: #64748b;
-      }
-    </style>
   <script type="importmap">
 {
   "imports": {
@@ -51,8 +20,7 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0?external=react,react-dom",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3?external=react,react-dom",
-    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0",
-    "livekit-client": "https://esm.sh/livekit-client@2.0.4"
+    "mapbox-gl": "https://esm.sh/mapbox-gl@2.15.0"
   }
 }
 </script>
